--- a/dev/jade/index.jade
+++ b/dev/jade/index.jade
@@ -4,5 +4,13 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        link(rel="stylesheet", href="./css/main.css")
         title Tur Agency
     body
+        .wrapper
+            div#drop-area
+                form.my-form
+                    p Upload multiple files with the file dialog or by dragging and dropping images onto the dashed region
+                    input(type="file" id="fileElem" multiple) 
+        script(src="./js/main.js")
+        
